--- a/Ansible/jenkins-master-setup.yaml
+++ b/Ansible/jenkins-master-setup.yaml
@@ -1,33 +1,37 @@
 ---
 - hosts: jenkins-master
-  become: true 
-  tasks: 
-  - name: add jenkins key 
-    apt_key: 
-      url:  https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
-      state: present 
+  become: yes
+  tasks:
+    - name: Add Jenkins repository key
+      rpm_key:
+        key: https://pkg.jenkins.io/redhat-stable/jenkins.io.key
+        state: present
 
-  - name: add jenkins repo 
-    apt_repository: 
-      repo: 'deb https://pkg.jenkins.io/debian-stable binary/'
-      state: present 
+    - name: Add Jenkins repository
+      yum_repository:
+        name: jenkins
+        description: Jenkins Official Repository
+        baseurl: https://pkg.jenkins.io/redhat-stable
+        gpgcheck: yes
+        enabled: yes
+        state: present
 
-  - name: install java 
-    apt: 
-      name: openjdk-11-jre
-      state: present
+    - name: Install Java
+      yum:
+        name: java-11-openjdk
+        state: present
 
-  - name: install jenkins 
-    apt: 
-      name: jenkins 
-      state: present 
+    - name: Install Jenkins
+      yum:
+        name: jenkins
+        state: present
 
-  - name: start jenkins service 
-    service: 
-      name: jenkins 
-      state: started 
+    - name: Start Jenkins service
+      service:
+        name: jenkins
+        state: started
 
-  - name: enable jenkins to start at boot time 
-    service: 
-      name: jenkins 
-      enabled: yes 
+    - name: Enable Jenkins to start at boot time
+      service:
+        name: jenkins
+        enabled: yes
